<resources>
    <string name="app_name">AppNote</string>
    <string name="general_error">Something went wrong, please try again</string>
    <string name="action_notify_task">com.example.appnote.action.DO</string>

    <!--Menu-->
    <string name="btn_delete_all">Delete All</string>
    <string name="btn_research">Research note</string>
    <string name="btn_sign_out">Log Out</string>
    <string name="btn_update_profile">Update profile</string>
    <string name="btn_change_appearance">Customize app</string>
    <string name="btn_tips">Tips</string>
    <string name="title_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="cd_profile_photo">Profile photo</string>
    <string name="txt_name">Name</string>

    <!--Main-->
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="is_not_connected">To use this resource you should have access to internet</string>

    <!--Login-->
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="txtCreateAccount">Does not have an account? Type here to create one and start enjoy AppNote</string>
    <string name="invalid_password">Password can not be empty</string>
    <string name="invalid_email">Email can not be empty</string>
    <string name="btn_log_in">LOG IN</string>

    <!--SingIn-->
    <string name="action_sign_in">Sign in</string>
    <string name="password_too_small">Password must have at least 6 characters</string>

    <!--Research-->
    <string name="research_empty">This item can not be empty</string>
    <string name="invalid_research">This item does not exists or is invalid, please try again</string>
    <string name="hint_search">Type here what you are looking for</string>
    <string name="btn_search">Search</string>

    <!--Save Note-->
    <string name="invalid_date">This date is in the past</string>
    <string name="image_empty">An image must be choose</string>
    <string name="title_empty">A title must be choose</string>
    <string name="description_empty">A description must be choose</string>
    <string name="cd_image">Choose image</string>
    <string name="btn_save_notes">Save Notes</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_place">Address</string>
    <string name="activateAlert">Activate Alert</string>
    <string name="activeAlarm">activate Alarm</string>
    <string name="showMap">showMap</string>

    <!--Maps-->
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--Customize-->
    <string name="title_customize">Choose your app colors</string>
    <string name="btn_save_color">SAVE</string>
    <string name="cd_app_icon">Ícone do aplicativo</string>
    <string name="cd_pokemon">Pokemon</string>
    <string name="hint_name">Name</string>
    <string name="cv_profile_photo">Profile Photo</string>
    <string name="updatePassword">Send a password reset email</string>
    <string name="cd_chosen_image">Chosen image</string>
    <string name="action_share">Share</string>
</resources>
