<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="?colorPrimaryDark"
    android:orientation="vertical"
    android:gravity="bottom"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/cd_profile_photo"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginStart="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/txt_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginStart="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/prompt_email"
        android:textColor="#FFFFFF"
        android:layout_marginStart="15dp" />

</LinearLayout>